--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,12 @@ div#govListing {line-height:26px;word-spacing:8px;}
     text-align: center;
 }
 
+.handlebars p {white-space:pre-line;}
+
+.news article .imageWrap {width:390px;height:240px;float:right;overflow:hidden;margin:0 0 20px 20px;}
+.news article img {width:390px;height:auto;}
+.news article:after {content:"";clear:both;display:block;}
+.news article {border-bottom:1px solid #eeeeee;}
 
 @media (max-width: 1024px) {
 	#btnTransportation, 
