--- a/css/custom.css
+++ b/css/custom.css
@@ -86,13 +86,6 @@ div#govListing {line-height:26px;word-spacing:8px;}
 
 #content li {margin:15px;padding-left:10px;}
 
-.introWrap .col-sm-8 p:first-of-type {
-    border-top: 0;
-    border-bottom: 0;
-    padding: 5px 0;
-    line-height: 1.8;
-}
-
 #btnTransportation {background:url(../images/transportation-icon-071217.png) no-repeat 50% 0;}
 #btnPublichHealth {background:url(../images/Public-health-icon-071217.png) no-repeat 50% 0;}
 #btnEnergyWater {background:url(../images/energy-environment-icon-071217.png) no-repeat 50% 0;}
@@ -124,6 +117,12 @@ div#govListing {line-height:26px;word-spacing:8px;}
 .news article img {width:390px;height:auto;}
 .news article:after {content:"";clear:both;display:block;}
 .news article {border-bottom:1px solid #eeeeee;}
+
+.homepage .bar {padding:0 0 60px 0;}
+.introWrap p {    
+    line-height: 1.8;
+}
+
 
 @media (max-width: 1024px) {
 	#btnTransportation, 
